some double scroll on the Y axis issues, solved

--- a/src/pages/HallOfFame.scss
+++ b/src/pages/HallOfFame.scss
@@ -11,7 +11,6 @@
       position: relative;
       display: flex;
       flex-direction: column;
-      top: 10rem;
       left: 15vw;
       
       background-color: var(--color-bg);
